abstract class iItems {
    abstract all(): Item[];
}
export default iItems;
