@startuml

class Main

class Items{
    -articles 直近n日分の全てのサイトの記事をセット
    +all() 
}

interface iRss{
    convert() サイトごとに違う項目名をここで統一する。
}

class CodeZineRss{

}

class GizModoRss{

}

interface iItems

Main --> iItems : items()
Items -|> iItems
Items -> iRss : get()

iRss <|-- CodeZineRss
iRss <|-- GizModoRss








@enduml